k8s/apps/gateway-config/overlays/hub/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-argocd
  namespace: argocd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: argocd
  to:
  - group: ""
    kind: Service
    name: argocd-server
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-vault
  namespace: vault
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: vault
  to:
  - group: ""
    kind: Service
    name: vault-hub
